# EPM

./: .buildinfo  .cursorrules  .gitattributes  .gitbook.yaml  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  DataCollection.xlsx  Demand_profile.py  LICENSE  MCP_EXPLAINED.md  MCP_SETUP.md  MCP_SETUP_COMPLETE.md  Makefile  Publish.bat  README.MD  SUMMARY.md  Sync.bat  _config.yml  _toc.yml  create_geojson.py  environment.yml  genindex.html  home.html  home.md  index.html  mcp_server.py  mkdocs.yml  objects.inv  pyproject.toml  render.yaml  requirements.txt  requirements_linux.txt  requirements_mac_and_windows.txt  search.html  searchindex.js
.dvc/: config
_sources/: home.md
_static/: planning_analysis_InteractiveMap_sapp.html
assets/: epm_map.html
config/: api_tokens.example.ini
dashboard/: app.py  config.py  data_loader.py
data/: epm_deployments.csv
doc/: quick_start.md
docs/: EPM_Folder_Structure  Liberia_2024_Solar_BESS_Project_Overview.md  _config.yml  _toc.yml  advanced_documentation.html  advanced_python.html  advanced_python.md  contributing.html  contributing.md  contributing_code.html  contributing_code.md  contributing_docs.html  contributing_docs.md  contributing_postprocess.html  detailed_input.html  engine_looping_tool.md  epm_folder_structure.html  epm_folder_structure.md  equations.html  equations.md  gams.md  git_process.html  git_process.md  index.md  input_detailed.html  input_detailed.md  input_from_excel_to_csv.html  input_from_excel_to_csv.md  input_fuel_brief.html  input_fuel_brief.md  input_help.md  input_overview.html  input_overview.md  input_reading.html  input_reading.md   input_representative_days.html  (+120 more)
(+2930 files in other folders)
